# icfpc2022

./: icfpc2022.cabal  stack.yaml
app/: Clean.hs  LocalMin.hs  Pixel.hs  Render.hs  Scale.hs  Score.hs  Swapper.hs  Validate.hs  Viz.hs
inits/: 26.grid  27.grid  28.grid  29.grid  30.grid  31.grid  32.grid  33.grid  34.grid  35.grid
lib/ICFPC/: Cost.hs  Gloss.hs  Graph.hs  ISL.hs  Lib.hs  Pairs.hs  Render.hs  Tracer.hs
lib/ICFPC/drawee/: README.md
lib/ICFPC/drawee/src/: drawee.cpp
lib/ICFPC/replacer/: README.md  replacer.cpp
solutions/: 01.isl  02.isl  03.isl  05.isl  06.isl  07.isl  09.isl  10.isl  11.isl  12.isl  13.isl  14.isl  15.isl  16.isl  17.isl  18.isl  19.isl  20.isl  21.isl  22.isl  23.isl  24.isl  25.isl
