cabal-version:      2.4
name:               icfpc2022
version:            0.1.0.0

executable run
    main-is: Run.hs
    build-depends: base
    hs-source-dirs: app
    default-language: GHC2021

executable validate
    main-is: Validate.hs
    build-depends: base, icfpc2022, text
    hs-source-dirs: app
    default-language: GHC2021
    extensions:
        LambdaCase

executable render
    main-is: Render.hs
    build-depends: base, icfpc2022, text, JuicyPixels
    hs-source-dirs: app
    default-language: GHC2021
    extensions:
        LambdaCase

executable score
    main-is: Score.hs
    build-depends: base, icfpc2022, text, JuicyPixels
    hs-source-dirs: app
    default-language: GHC2021
    extensions:
        LambdaCase

library
    build-depends:
        base,
        containers,
        text,
        semigroupoids,
        transformers,
        mtl,
        lens,
        JuicyPixels,
        vector
    hs-source-dirs: lib
    default-language: GHC2021
    extensions:
        LambdaCase,
        DerivingVia,
        OverloadedStrings,
        MultiWayIf,
        UndecidableInstances
    exposed-modules:
        ICFPC.Lib,
        ICFPC.ISL,
        ICFPC.Tracer,
        ICFPC.Cost,
        ICFPC.Render
