cabal-version:      2.4
name:               icfpc2022
version:            0.1.0.0

executable validate
    main-is: Validate.hs
    build-depends: base, icfpc2022, text
    hs-source-dirs: app
    default-language: GHC2021
    extensions:
        LambdaCase

executable render
    main-is: Render.hs
    build-depends: base, icfpc2022, text, JuicyPixels
    hs-source-dirs: app
    default-language: GHC2021
    extensions:
        LambdaCase

executable score
    main-is: Score.hs
    build-depends: base, icfpc2022, text, JuicyPixels
    hs-source-dirs: app
    default-language: GHC2021
    extensions:
        LambdaCase

executable viz
    main-is: Viz.hs
    build-depends: base, icfpc2022, text, gloss, lens, JuicyPixels, mtl, containers
    hs-source-dirs: app
    default-language: GHC2021
    extensions:
        LambdaCase,
        ViewPatterns,
        TemplateHaskell

executable pixel
    main-is: Pixel.hs
    build-depends: base, icfpc2022, text, JuicyPixels, lens, mtl
    hs-source-dirs: app
    default-language: GHC2021
    extensions:
        LambdaCase

executable localmin
    main-is: LocalMin.hs
    build-depends: base, icfpc2022, text, JuicyPixels, lens, mtl
    hs-source-dirs: app
    default-language: GHC2021
    extensions:
        LambdaCase,
        ViewPatterns

library
    build-depends:
        base,
        containers,
        text,
        semigroupoids,
        transformers,
        mtl,
        lens,
        JuicyPixels,
        vector,
        array,
        gloss
    hs-source-dirs: lib
    default-language: GHC2021
    extensions:
        LambdaCase,
        DerivingVia,
        OverloadedStrings,
        MultiWayIf,
        UndecidableInstances,
        RecordWildCards,
        ViewPatterns
    exposed-modules:
        ICFPC.Lib,
        ICFPC.ISL,
        ICFPC.Tracer,
        ICFPC.Cost,
        ICFPC.Render,
        ICFPC.Pairs,
        ICFPC.Graph,
        ICFPC.Gloss
